# fastapi

./: main.py  pyproject.toml  requirements.txt
API/: api_classes.py  api_controller.py
classes/: dao.py  mongo_conn.py
classes/conf/: config.ini
