[tool.poetry]
name = "offer-scraper"
version = "1.0"
description = "API para la base de datos de scraper de ofertas."
authors = ["Alfredo Marquina Meseguer <alfmarmes@gmail.com>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "3.10"
fastapi = "0.95.2"
uvicorn = "0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
